# PupEvents

./: Client.hs  Dispatcher.hs  Events.hs  Handler.hs  Listener.hs  Main.hs  PQueue.hs  Pup-Events.cabal  README.md  Server.hs  helloworldOGL.hs  pup-events.cabal
Pup-Events-Demo/: Pup-Events-Demo.cabal
Pup-Events-Demo/EventsClient/: Demo.hs  EventsClient.hs
Pup-Events-Demo/EventsServer/: ServerDemo.hs
PupEventsClient/: Pup-Events-Client.cabal  PupEventsClient.hs  pup-events-client.cabal
PupEventsPQueue/: PupEventsPQueue.hs  pup-events-pqueue.cabal
PupEventsServer/: Pup-Events-Server.cabal  PupEventsServer.hs  pup-events-server.cabal
