name:                   Pup-Events
version:                1.0
synopsis:               A networked event handling framework for hooking
                        into other programs.
description:            Pup-Events is a networking enabled event handling
                        framework. This is a virtual package to install all
                        of the Pup-Events modules.
category:               Networking
author:                 Daniel Wilson
maintainer:             wilsonhardrock@gmail.com
copyright:              (c) 2012 Daniel Wilson
license:                GPL-3
license-file:           LICENSE
cabal-version:          >= 1.10.2.0
tested-with:            GHC == 7.0.4
build-type:             Simple

library
    exposed-modules:    
    default-language:   Haskell98
    other-modules:      
    build-depends:      base == 4.*, Pup-Events-Server, Pup-Events-Client,
                        Pup-Events-PQueue

executable pupevents-all
    main-is:            Main.hs
    default-language:   Haskell98
